fix: improved style for 2 line breaks in a row

--- a/src/messaging/components/message/message.css
+++ b/src/messaging/components/message/message.css
@@ -107,7 +107,7 @@
 
 .message-content br {
   content: "";
-  margin: 2px;
+  margin: 0.5em;
   display: block;
 }
 
